2002-06-05  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-04  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-mime-info.c (reload_if_needed) : honour
	  gnome_vfs_is_frozen.
	(gnome_vfs_is_frozen) : rename from should_write_file_back.

2002-06-04  Kristian Rietveld  <kris@gtk.org>

	* libgnomevfs/gnome-vfs-standard-callbacks.h: add
	http:send-additional-headers and http:received-headers hooks.

	* modules/http-method.c (create_handle): invoke headers received
	callback after receiving full header,
	(make_request): invoke send additional headers callback and add
	extra headers if needed,
	(invoke_callback_headers_received): new function,
	(invoke_callback_send_additional_headers): new function

2002-06-03  Ian McKellar  <yakk@yakk.net>

	* modules/ssh-method.c: Big improvement to the ssh method from
	Robert Migues <mibus@bigpond.com>

2002-06-02  Alex Graveley  <alex@ximian.com>

	* modules/desktop-method.c (do_get_file_info): Set mime_type to
	"x-directory/vfolder-desktop", to allow launcher creation from
	nautilus.
	(do_get_file_info_from_handle): Ditto.

Fri May 31 10:23:01 2002  George Lebl <jirka@5z.com>

	* modules/applications.vfolder-info.in,
	  modules/preferences.vfolder-info.in: Handle both kewords
	  'Sawfish' and 'X-GNOME-Sawfish' to make a clear transition,
	  in case someone has an older install of sawfish.

Thu May 30 17:11:04 2002  George Lebl <jirka@5z.com>

	* modules/preferences.vfolder-info.in: arghh! we have two places
	  where preference menus are defined.  Ok fix the bug here as well.

Thu May 30 17:04:48 2002  George Lebl <jirka@5z.com>

	* modules/applications.vfolder-info.in: don't put sawfish capplets
	  in the advanced dir fixes #77772

Thu May 30 10:03:03 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: the directories are of type
	  x-directory/vfolder-desktop

2002-05-28  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-application-registry.c